[project]
name = "planscape"
version = "0.1.0"
description = "planscape"
authors = [{ name = "SIG-GIS" }]
requires-python = ">=3.10, <3.11"
dependencies = [
    "dj-rest-auth>=5.0.2,<5.1.0",
    "django>=5.2.7,<6.0.0",
    "django-allauth>=0.57.0,<0.58.0",
    "django-cors-headers>=4.3.1,<5",
    "django-filter>=25.2,<26.0",
    "djangorestframework>=3.14.0,<3.15.1",
    "djangorestframework-gis>=0.18.0",
    "djangorestframework-simplejwt>=5.2.2,<5.3.0",
    "numpy>=1.26.4,<2",
    "pandas>=2.2.2,<3",
    "psycopg2-binary>=2.9.3",
    "python-decouple==3.6",
    "rasterio>=1.3.10,<2",
    "rasterstats>=0.19.0,<0.20",
    "typing-extensions>=4.11.0,<5",
    "uwsgi>=2.0.25.1,<3",
    "boto3>=1.34.88,<2",
    "pytz~=2024.1",
    "sentry-sdk>=1.45.0,<2",
    "django-password-policies-validator>=1.0.2",
    "black==23.7.0",
    "humanize==4.8.0",
    "shapely==2.0.2",
    "fiona==1.10.0",
    "celery==5.5.3",
    "redis==5.0.1",
    "shortuuid==1.0.11",
    "jsonschema>=4.21,<5.0",
    "gunicorn>=22.0.0,<23",
    "pyopenssl==24.1.0",
    "django-treebeard>=4.7.1,<5",
    "django-activity-stream>=2.0.0,<3",
    "celery-types>=0.22.0,<0.23",
    "django-types>=0.19.1,<0.20",
    "django-stubs-ext>=5.0.4,<6",
    "whitenoise>=6.7.0,<7",
    "djangorestframework-types>=0.8.0,<0.9",
    "toml>=0.10.2,<0.11",
    "rio-cogeo>=5.3.6,<6",
    "django-json-widget>=2.0.1,<3",
    "pygments>=2.18.0,<3",
    "setuptools>=75.7.0,<76",
    "mmh3>=5.1.0,<6",
    "multipledispatch>=1.0.0,<2",
    "pygeometa>=0.16.1,<0.17",
    "python-magic>=0.4.27,<0.5",
    "django-cacheops~=7.1",
    "martor>=1.6.45,<2",
    "django-redis>=5.4,<6",
    "google-cloud-storage>=3.1.1,<4",
    "gevent>=25.9.1,<26",
    "zope-event==5.1.1",
    "scipy==1.15.0",
    "opentelemetry-distro>=0.60b1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "pip>=25.3",
    "opentelemetry-instrumentation-celery>=0.60b1",
    "opentelemetry-instrumentation-django>=0.60b1",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-instrumentation>=0.60b1",
]

[tool.isort]
profile = "black"
py_version = 310
color_output = false

[dependency-groups]
dev = [
    "colorama>=0.4.6,<0.5",
    "flake8-pyproject>=1.2.3,<2",
    "pytest==7.1.2",
    "pytest-cov>=3.0.0,<4",
    "pytest-django>=4.5.2,<5",
    "pytest-mock>=3.8.2,<4",
    "jwcrypto>=1.3.1,<2",
    "responses>=0.21.0,<0.22",
    "moto>=4.0.0,<5",
    "black==23.7.0",
    "isort>=5.12.0,<6",
    "memory-profiler>=0.61.0,<0.62",
    "django-extensions==3.2.3",
    "pytest-watch>=4.2.0,<5",
    "pre-commit>=2.20.0,<3",
    "flake8>=6.0.0,<7",
    "coverage>=6.4.4,<7",
    "freezegun>=1.2.2,<2",
    "requests-mock>=1.9.3,<2",
    "mypy>=1.11.2,<2",
    "types-python-dateutil>=2.8.18,<3",
    "pytest-dotenv>=0.5.2,<0.6",
    "types-cachetools>=5.2.1,<6",
    "typed-ast>=1.5.4,<2",
    "factory-boy>=3.3.0,<4",
    "drf-spectacular>=0.27.2,<0.28",
    "celery-types>=0.22.0,<0.23",
    "tblib>=3.1.0,<4",
    "ruff>=0.14.10",
]

[tool.flake8]
max-line-length = 88

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py310']
exclude = 'migrations'

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
addopts = "--cov --cov-append --cov-report term-missing --envfile .test.env --no-cov-on-fail --no-header --disable-warnings -rf --durations=5 --no-migrations"
DJANGO_SETTINGS_MODULE = "planscape.settings"
python_files = "tests.py test_*.py *_tests.py"

[tool.pyright]
include = ["src/planscape"]
exclude = ["**/__pycache__", "**/tests/"]
pythonVersion = "3.10"
pythonPlatform = "Linux"
reportMissingImports = "error"
reportMissingTypeStubs = false
reportIncompatibleMethodOverride = "warning"
reportIncompatibleVariableOverride = "none"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
exclude = [
    'base',
    'conditions',
    'config',
    'existing_projects',
    'goals',
    'impacts',
    'metrics',
    'organizations',
    'planning',
    'projects',
    'restrictions',
    'stands',
    'testing',
    'tests',
]
